# obs-plugins

./: CMakeLists.txt  README.md  grayscale-histogram-dock.cpp  grayscale-histogram-dock.hpp  obs-grayscale-histogram.c  obs-grayscale-histogram.h
cmake/windows/: obs-module.rc.in
data/locale/: en-US.ini
